# bloop-server-framework

./: .releaserc.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: conventional-pr-title.yml  pull-request.yml  release.yml
examples/: cert.pem  key.pem
examples/simple/: bloop.rs  main.rs  player.rs
src/: achievement.rs  bloop.rs  builder.rs  engine.rs  event.rs  lib.rs  message.rs  network.rs  nfc_uid.rs  player.rs  statistics.rs  test_utils.rs  trigger.rs
src/evaluator/: boxed.rs  distinct_values.rs  min_bloops.rs  mod.rs  registration_number.rs  spelling_bee.rs  streak.rs  test_utils.rs  time.rs  trigger.rs
src/health_monitor/: mod.rs  telegram.rs
