[package]
name = "bloop-server-framework"
version = "0.1.0"
edition = "2024"
authors = ["Ben Scholzen 'DASPRiD' <mail@dasprids.de>"]
description = "Bloop server framework"
license = "BSD-2-Clause"
repository = "https://github.com/bloop-box/bloop-server-framework-rs"

[features]
tokio-graceful-shutdown = ["dep:tokio-graceful-shutdown"]

[[example]]
name = "simple"
required-features = ["tokio-graceful-shutdown"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
hex = "0.4.3"
uuid = { version = "1.17.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
md5 = "0.7.0"
chrono-tz = "0.10.3"
cached = "0.55.1"
num-integer = "0.1.46"
tokio = { version = "1.45.1", features = ["fs", "io-std", "io-util", "macros", "net", "rt", "sync", "time"] }
async-trait = "0.1.88"
tokio-rustls = "0.26.2"
rustls = "0.23.28"
thiserror = "2.0.12"
tracing = "0.1.41"
argon2 = "0.5.3"
tokio-io-timeout = "1.2.0"
tokio-graceful-shutdown = { version = "0.16.0", optional = true }

[dev-dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full"]}
tokio-graceful-shutdown = "0.16.0"
